--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "nodemon server/start.js"
   },
   "dependencies": {
+    "babel-loader": "^7.1.2",
     "body-parser": "^1.15.2",
     "chalk": "^1.1.3",
     "express": "^4.14.0",
@@ -22,7 +23,8 @@
     "redux": "^3.6.0",
     "redux-logger": "^2.7.0",
     "redux-thunk": "^2.1.0",
-    "sequelize": "^4.7.4"
+    "sequelize": "^4.7.4",
+    "webpack": "^3.8.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
